add new feature

--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
     <title>Let's enjoy together</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="service.css">
+    <link rel="stylesheet" href="interBook.css">
+    <link rel="stylesheet" href="rooms.css">
 
     <body>
+
+
+        <!-- navigation bar -->
+
+
         <section id="navbar">
             <div class="navigationbar">
                 <div class="nav-logo">
@@ -29,6 +38,10 @@
             </div>
         </section>
 
+
+        <!-- home section  -->
+
+
         <section id="home-section">
             <div class="home-title">
                 <div class="home-containt">
@@ -37,16 +50,16 @@
                     <a id="tourBtn" href="">TAKE A TOUR</a>
                     <a href="">LEARN MORE</a>
                 </div>
-
             </div>
-
         </section>
+
+        <!-- form and date availability section -->
+
         <section id="container">
             <div class="form-booking">
                 <div class="form-content">
                     <p>CHECK-IN</p>
                     <i class="far fa-calendar-alt">Check-In Date</i>
-
                 </div>
                 <div class="form-content">
                     <p>CHECK-OUT</p>
@@ -62,16 +75,17 @@
                 </div>
                 <div class="form-content" id="color-ful">
                     <p>CHECK AVAILABILITY</p>
-
                 </div>
             </div>
         </section>
+
+        <!-- about section of the hotel -->
 
         <section id="about-section">
             <div class="about-title">
                 <div class="about-items">
                     <div class="first-about-card">
-                        <i class="fas fa-hand-holding-water fa-2x"></i>
+                        <i class="fas fa-hand-holding-water fa-3x"></i>
                         <h3>Cozy Room</h3>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
                     </div>
@@ -82,13 +96,11 @@
                         <img src="./img/third-img.jpg" alt="">
                     </div>
                     <div class="first-about-card  fourth-card">
-                        <i class="fas fa-hand-holding-water fa-2x"></i>
+                        <i class="fas fa-hand-holding-water fa-3x"></i>
                         <h3>Special Offers</h3>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
                     </div>
-
                 </div>
-
                 <div class="about-booking">
                     <div class="about-booking-card">
                         <span>ABOUT US</span>
@@ -100,6 +112,11 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- service section of the hotel -->
+
+
         <section id="service-section">
             <div class="service-topic">
                 <span>UNWIND SERVICES</span>
@@ -129,6 +146,69 @@
                 <div class="service-item">
                     <i class="fas fa-hands-helping fa-3x"></i>
                     <h2>Help & Support</h2>
+                </div>
+            </div>
+        </section>
+
+        <!-- intermediate booking section -->
+
+
+        <section id="book-table">
+            <div class="intermediate-booking">
+                <div class="intermediate-content">
+                    <span>FIND BEST HOTEL FOR LEAVING</span>
+                    <h2>Find the Best Hotel in Your Next Vacation</h2>
+                </div>
+                <div class="intermediate-button">
+                    <a href="">BOOK NOW</a>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- room section  -->
+
+        <section id="hotel-room">
+            <div class="room-topic">
+                <span>OUR ROOMS</span>
+                <h2>Featured Rooms</h2>
+            </div>
+            <div class="room-feature">
+                <div class="room-card">
+                    <h3>Suite Room</h3>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p id="room-rent">
+                        <span>$450</span>
+                        <small>/Night</small>
+                    </p>
+                    <a href="">Book Now</a>
+                </div>
+                <div class="room-card">
+                    <img src="./img/room1.jpg" alt="">
+                </div>
+                <div class="room-card">
+                    <h3>Deluxe Room</h3>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p id="room-rent">
+                        <span>$450</span>
+                        <small>/Night</small>
+                    </p>
+                    <a href="">Book Now</a>
+                </div>
+                <div class="room-card">
+                    <img src="./img/room2.jpg" alt="">
+                </div>
+                <div class="room-card">
+                    <h3>Family Room</h3>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p id="room-rent">
+                        <span>$450</span>
+                        <small>/Night</small>
+                    </p>
+                    <a href="">Book Now</a>
+                </div>
+                <div class="room-card">
+                    <img src="./img/room3.jpg" alt="">
                 </div>
             </div>
         </section>
