add new feature

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="service.css">
     <link rel="stylesheet" href="interBook.css">
     <link rel="stylesheet" href="rooms.css">
+    <link rel="stylesheet" href="hotelTour.css">
+    <link rel="stylesheet" href="Resto.css">
 
     <body>
 
@@ -29,7 +31,7 @@
                     <ul>
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
-                        <li><a href="">ROOMS</a></li>
+                        <li><a href="#hotel-room">ROOMS</a></li>
                         <li><a href="">BARS</a></li>
                         <li><a href="">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
@@ -209,6 +211,74 @@
                 </div>
                 <div class="room-card">
                     <img src="./img/room3.jpg" alt="">
+                </div>
+            </div>
+        </section>
+
+
+        <!-- hotel tour section -->
+
+        <section id="hotel-tour">
+            <div class="tour-content">
+                <span>WATCH OUR LUXURIOUS HOTEL</span>
+                <h2>Take A Tour</h2>
+                <i class="far fa-play-circle fa-4x"></i>
+            </div>
+        </section>
+
+
+        <!-- Restorant and Bar section  -->
+
+        <section id="Resto">
+            <div class="service-topic">
+                <span>RESTO & BAR</span>
+                <h2>Restaurant & Bar</h2>
+            </div>
+            <div class="resto-content">
+                <div class="resto-img">
+                    <img src="./img/resto.jpg" alt="">
+                </div>
+                <div class="resto-items">
+                    <div class="Bars-item">
+                        <img src="./img/pizza.jpg" alt="">
+                        <span>Grilled Beef with potatoes</span>
+                        <small>$20.00</small>
+                    </div>
+                    <div class="Bars-item">
+                        <img src="./img/bar1.jpg" alt="">
+                        <span>Grilled Beef with potatoes</span>
+                        <small>$20.00</small>
+                    </div>
+                    <div class="Bars-item">
+                        <img src="./img/bar2.jpg" alt="">
+                        <span>Grilled Beef with potatoes</span>
+                        <small>$20.00</small>
+                    </div>
+                    <div class="Bars-item">
+                        <img src="./img/bar3.jpg" alt="">
+                        <span>Grilled Beef with potatoes</span>
+                        <small>$20.00</small>
+                    </div>
+                    <div class="Bars-item">
+                        <img src="./img/bar4.jpg" alt="">
+                        <span>Grilled Beef with potatoes</span>
+                        <small>$20.00</small>
+                    </div>
+                    <div class="Bars-item">
+                        <img src="./img/bar5.jpg" alt="">
+                        <span>Grilled Beef with potatoes</span>
+                        <small>$20.00</small>
+                    </div>
+                    <div class="Bars-item">
+                        <img src="./img/bar6.jpg" alt="">
+                        <span>Grilled Beef with potatoes</span>
+                        <small>$20.00</small>
+                    </div>
+                    <div class="Bars-item">
+                        <img src="./img/bar7.jpg" alt="">
+                        <span>Grilled Beef with potatoes</span>
+                        <small>$20.00</small>
+                    </div>
                 </div>
             </div>
         </section>
