add newfeature + meadia query

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="rooms.css">
     <link rel="stylesheet" href="hotelTour.css">
     <link rel="stylesheet" href="Resto.css">
+    <link rel="stylesheet" href="hotelGuest.css">
+    <link rel="stylesheet" href="hotelBlog.css">
+    <link rel="stylesheet" href="outdoor.css">
+    <link rel="stylesheet" href="footer.css">
+
 
     <body>
 
@@ -282,6 +287,137 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- guest section  -->
+
+        <section id="guest-section">
+            <div class="service-topic">
+                <span>TESTIMONIAL</span>
+                <h2>Happy Guests</h2>
+            </div>
+            <div class="guest-content">
+                <div class="guest-card">
+                    <div class="card-content">
+                        <img src="./img/guest1.jpg" alt="">
+                        <div class="about-guest">
+                            <h3>SOPHIA</h3>
+                            <span>MARKETTING MANAGER</span>
+                        </div>
+                    </div>
+                    <P>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</P>
+                </div>
+                <div class="guest-card">
+                    <div class="card-content">
+                        <img src="./img/guest2.jpg" alt="">
+                        <div class="about-guest">
+                            <h3>TOM JACSON</h3>
+                            <span>MARKETTING MANAGER</span>
+                        </div>
+                    </div>
+                    <P>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</P>
+                </div>
+                <div class="guest-card">
+                    <div class="card-content">
+                        <img src="./img/guest3.jpg" alt="">
+                        <div class="about-guest">
+                            <h3>NANCY WHEELER</h3>
+                            <span>MARKETTING MANAGER</span>
+                        </div>
+                    </div>
+                    <P>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</P>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- hotel blog section  -->
+
+
+        <section id="blog-section">
+            <div class="service-topic">
+                <span>OUR BLOG</span>
+                <h2>Recent Blog</h2>
+            </div>
+            <div class="blog-content">
+                <div class="blog-img">
+                    <img src="./img/blog1.jpg" alt="">
+                </div>
+                <div class="blog-img">
+                    <img src="./img/blog2.jpg" alt="">
+                </div>
+                <div class="blog-img">
+                    <img src="./img/blog3.jpg" alt="">
+                </div>
+                <div class="blog-img">
+                    <img src="./img/blog4.jpg" alt="">
+                </div>
+                <div class="blog-card">
+                    <div class="blog-card-details">
+                        <p>ADMIN</p>
+                        <p>DEC. 23 2020</p>
+                        <span>3 COMMENTS</span>
+                    </div>
+                    <h1>Best Hotel Near Beach in Hawaii</h1>
+                    <p class="blog-card-class">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                </div>
+                <div class="blog-card">
+                    <div class="blog-card-details">
+                        <p>ADMIN</p>
+                        <p>DEC. 23 2020</p>
+                        <span>3 COMMENTS</span>
+                    </div>
+                    <h1>Best Hotel Near Beach in Hawaii</h1>
+                    <p class="blog-card-class">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                </div>
+                <div class="blog-card">
+                    <div class="blog-card-details">
+                        <p>ADMIN</p>
+                        <p>DEC. 23 2020</p>
+                        <span>3 COMMENTS</span>
+                    </div>
+                    <h1>Best Hotel Near Beach in Hawaii</h1>
+                    <p class="blog-card-class">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                </div>
+                <div class="blog-card">
+                    <div class="blog-card-details">
+                        <p>ADMIN</p>
+                        <p>DEC. 23 2020</p>
+                        <span>3 COMMENTS</span>
+                    </div>
+                    <h1>Best Hotel Near Beach in Hawaii</h1>
+                    <p class="blog-card-class">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- outdoor section of the hotel  -->
+
+
+        <section id="outdoor-section">
+            <div class="outdoor-gallery">
+                <div class="gallery-img">
+                    <img src="./img/outdoor1.jpg" alt="">
+                </div>
+                <div class="gallery-img">
+                    <img src="./img/outdoor2.jpg" alt="">
+                </div>
+                <div class="gallery-img">
+                    <img src="./img/outdoor3.jpg" alt="">
+                </div>
+                <div class="gallery-img">
+                    <img src="./img/outdoor4.jpg" alt="">
+                </div>
+                <div class="gallery-img">
+                    <img src="./img/outdoor5.jpg" alt="">
+                </div>
+            </div>
+        </section>
+
+        <footer id="footer-section">
+            copyright @2021 &copy; All Right Reserved!
+        </footer>
     </body>
 
 </html>
