adding media query for mobile

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="hotelBlog.css">
     <link rel="stylesheet" href="outdoor.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="utilityClass.css">
 
 
     <body>
@@ -125,7 +126,7 @@
 
 
         <section id="service-section">
-            <div class="service-topic">
+            <div class="utility-class">
                 <span>UNWIND SERVICES</span>
                 <h2>Explore Our Hotel Services</h2>
             </div>
@@ -176,7 +177,7 @@
         <!-- room section  -->
 
         <section id="hotel-room">
-            <div class="room-topic">
+            <div class="utility-class">
                 <span>OUR ROOMS</span>
                 <h2>Featured Rooms</h2>
             </div>
@@ -235,7 +236,7 @@
         <!-- Restorant and Bar section  -->
 
         <section id="Resto">
-            <div class="service-topic">
+            <div class="utility-class">
                 <span>RESTO & BAR</span>
                 <h2>Restaurant & Bar</h2>
             </div>
@@ -292,7 +293,7 @@
         <!-- guest section  -->
 
         <section id="guest-section">
-            <div class="service-topic">
+            <div class="utility-class">
                 <span>TESTIMONIAL</span>
                 <h2>Happy Guests</h2>
             </div>
@@ -335,7 +336,7 @@
 
 
         <section id="blog-section">
-            <div class="service-topic">
+            <div class="utility-class">
                 <span>OUR BLOG</span>
                 <h2>Recent Blog</h2>
             </div>
@@ -414,6 +415,9 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- footer section  -->
 
         <footer id="footer-section">
             copyright @2021 &copy; All Right Reserved!
