--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's enjoy together</title>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="about.css">
@@ -36,10 +37,10 @@
                 <div class="nav-item">
                     <ul>
                         <li><a href="">HOME</a></li>
-                        <li><a href="">ABOUT</a></li>
+                        <li><a href="#about-section">ABOUT</a></li>
                         <li><a href="#hotel-room">ROOMS</a></li>
-                        <li><a href="">BARS</a></li>
-                        <li><a href="">BLOG</a></li>
+                        <li><a href="#Resto">BARS</a></li>
+                        <li><a href="#blog-section">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
@@ -92,18 +93,18 @@
         <section id="about-section">
             <div class="about-title">
                 <div class="about-items">
-                    <div class="first-about-card">
+                    <div class="first-about-card" data-aos="fade-right">
                         <i class="fas fa-hand-holding-water fa-3x"></i>
                         <h3>Cozy Room</h3>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
                     </div>
-                    <div class="first-about-img">
+                    <div class="first-about-img " data-aos="flip-left">
                         <img src="./img/first-img.jpg" alt="">
                     </div>
-                    <div class="first-about-img">
+                    <div class="first-about-img" data-aos="flip-left">
                         <img src="./img/third-img.jpg" alt="">
                     </div>
-                    <div class="first-about-card  fourth-card">
+                    <div class="first-about-card  fourth-card" data-aos="fade-left">
                         <i class="fas fa-hand-holding-water fa-3x"></i>
                         <h3>Special Offers</h3>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
@@ -126,7 +127,7 @@
 
 
         <section id="service-section">
-            <div class="utility-class">
+            <div class="utility-class" data-aos="slide-up">
                 <span>UNWIND SERVICES</span>
                 <h2>Explore Our Hotel Services</h2>
             </div>
@@ -177,7 +178,7 @@
         <!-- room section  -->
 
         <section id="hotel-room">
-            <div class="utility-class">
+            <div class="utility-class" data-aos="slide-up">
                 <span>OUR ROOMS</span>
                 <h2>Featured Rooms</h2>
             </div>
@@ -191,7 +192,7 @@
                     </p>
                     <a href="">Book Now</a>
                 </div>
-                <div class="room-card">
+                <div class="room-card" data-aos="flip-left">
                     <img src="./img/room1.jpg" alt="">
                 </div>
                 <div class="room-card">
@@ -203,7 +204,7 @@
                     </p>
                     <a href="">Book Now</a>
                 </div>
-                <div class="room-card">
+                <div class="room-card" data-aos="flip-right">
                     <img src="./img/room2.jpg" alt="">
                 </div>
                 <div class="room-card">
@@ -215,7 +216,7 @@
                     </p>
                     <a href="">Book Now</a>
                 </div>
-                <div class="room-card">
+                <div class="room-card" data-aos="flip-left">
                     <img src="./img/room3.jpg" alt="">
                 </div>
             </div>
@@ -236,12 +237,12 @@
         <!-- Restorant and Bar section  -->
 
         <section id="Resto">
-            <div class="utility-class">
+            <div class="utility-class" data-aos="slide-up">
                 <span>RESTO & BAR</span>
                 <h2>Restaurant & Bar</h2>
             </div>
             <div class="resto-content">
-                <div class="resto-img">
+                <div class="resto-img" data-aos="flip-left">
                     <img src="./img/resto.jpg" alt="">
                 </div>
                 <div class="resto-items">
@@ -293,12 +294,12 @@
         <!-- guest section  -->
 
         <section id="guest-section">
-            <div class="utility-class">
+            <div class="utility-class" data-aos="slide-up">
                 <span>TESTIMONIAL</span>
                 <h2>Happy Guests</h2>
             </div>
             <div class="guest-content">
-                <div class="guest-card">
+                <div class="guest-card" data-aos="slide-up">
                     <div class="card-content">
                         <img src="./img/guest1.jpg" alt="">
                         <div class="about-guest">
@@ -308,7 +309,7 @@
                     </div>
                     <P>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</P>
                 </div>
-                <div class="guest-card">
+                <div class="guest-card" data-aos="slide-up">
                     <div class="card-content">
                         <img src="./img/guest2.jpg" alt="">
                         <div class="about-guest">
@@ -318,7 +319,7 @@
                     </div>
                     <P>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</P>
                 </div>
-                <div class="guest-card">
+                <div class="guest-card" data-aos="slide-up">
                     <div class="card-content">
                         <img src="./img/guest3.jpg" alt="">
                         <div class="about-guest">
@@ -336,21 +337,21 @@
 
 
         <section id="blog-section">
-            <div class="utility-class">
+            <div class="utility-class" data-aos="slide-up">
                 <span>OUR BLOG</span>
                 <h2>Recent Blog</h2>
             </div>
             <div class="blog-content">
-                <div class="blog-img">
+                <div class="blog-img" data-aos="flip-left">
                     <img src="./img/blog1.jpg" alt="">
                 </div>
-                <div class="blog-img">
+                <div class="blog-img" data-aos="flip-right">
                     <img src="./img/blog2.jpg" alt="">
                 </div>
-                <div class="blog-img">
+                <div class="blog-img" data-aos="flip-left">
                     <img src="./img/blog3.jpg" alt="">
                 </div>
-                <div class="blog-img">
+                <div class="blog-img" data-aos="flip-right">
                     <img src="./img/blog4.jpg" alt="">
                 </div>
                 <div class="blog-card">
@@ -422,6 +423,13 @@
         <footer id="footer-section">
             copyright @2021 &copy; All Right Reserved!
         </footer>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init({
+                offset: 300,
+                duration: 1000,
+            });
+        </script>
     </body>
 
 </html>
