add click event

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <h2>Unwind A Hotel Booking Agency</h2>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
                         </p>
-                        <a href="">BOOK YOUR ROOM NOW</a>
+                        <a id="bookRoom" href="">BOOK YOUR ROOM NOW</a>
                     </div>
                 </div>
             </div>
@@ -431,5 +431,6 @@
             });
         </script>
     </body>
+    <script src="js/index.js"></script>
 
 </html>
